1. List of blocked accounts, button in address bar 2. 'Block' button in messenger.

--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -13,5 +13,13 @@
 
   "btnMarkIgnored": {
     "message": "Скрыть из поиска"
+  },
+
+  "actionDefTitle": {
+    "message": "MILF"
+  },
+
+  "settingsLink": {
+    "message": "Исключенные из поиска"
   }
 }
